# ibc

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  Makefile  README.md  compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/skill/github-issue/: SKILL.md
.github/skill/github-issue/references/: templates.md
.github/workflows/: branch.yml  cd.yml  main.yml  pages.yml  pr.yml  tag.yml
architecture/db/: index.html
architecture/middleware/: index.html
architecture/overview/: index.html
context/: index.html
development/contributing/: index.html
development/dependencies/: index.html
development/docker/: index.html
development/quality/: index.html
development/running/: index.html
development/setup/: index.html
docs/development/: docker.md  running.md  setup.md
docs/pipeline/: dependabot.md  overview.md
docs/security/: overview.md  scenario-1.md  scenario-2.md  scenario-4.md  scenario-5.md
overview/: index.html
pipeline/branches/: index.html
pipeline/dependabot/: index.html
pipeline/overview/: index.html
search/: search_index.json
security/overview/: index.html
security/scenario-1/: index.html
security/scenario-2/: index.html
security/scenario-3/: index.html
security/scenario-4/: index.html
security/scenario-5/: index.html
security/scenario-6/: index.html
src/data/: yaml.py
testing/overview/: index.html
tests/: test_hello_world.py
